# Fintrack-API

./: .coverage  .gitignore  README.md  docker-compose.yml  pyproject.toml  report.html  requirements.txt  vercel.json
.github/workflows/: tests.yml
docker/: casc.yaml  dockerfile
docs/: code_explanation.md
fintrack_api/: dependencies.py
fintrack_api/models/structural/: TokenModels.py
fintrack_api/services/db/: __init__.py  sql_connection.py
fintrack_api/services/user/: update.py
jenkins/: Jenkinsfile
scripts/: create_and_activate_venv.sh  git_commit.ps1  message.txt
src/: main.py
src/fintrack_api/: api.py  dependencies.py
src/fintrack_api/models/: TokenModels.py  userModels.py
src/fintrack_api/routes/: add_router.py  delete_router.py  update_router.py  userRoutes.py  user_router.py  visualization_router.py
src/fintrack_api/utils/: frintrack_api_utils.py
src/tests/: test_alert.py  test_main.py  test_register.py  test_reminder.py
src/tests/alert/: test_alert_add.py  test_alert_delete.py  test_alert_update.py  test_alert_visualization.py  test_visualization_add.py
src/tests/expenditure/: test_expenditure_add.py  test_expenditure_delete.py  test_expenditure_update.py  test_expenditure_visualization.py
src/tests/reminder/: test_reminder_add.py  test_reminder_delete.py  test_reminder_update.py  test_reminder_visualization.py
src/tests/revenue/: test_revenue_add.py  test_revenue_delete.py  test_revenue_update.py  test_revenue_visualization.py
src/tests/user/: test_login.py  test_register.py
src/tests/utils/: test_utils.py
(+12 files in other folders)
